# softsim

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yaml  tests.yaml
include/core/: point.hpp  simulation.hpp
include/math/: vector.hpp
src/: main.cpp
src/core/: point.cpp  simulation.cpp
src/gui/: Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/math/: vector.cpp
src/utils/: config.hpp
tests/: vector_basics.cpp  vector_complexe.cpp
